kubernetes/apps/grimmory/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grimmory
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: grimmory
  template:
    metadata:
      labels:
        app: grimmory
    spec:
      # securityContext:
      #   runAsUser: 1000
      #   runAsGroup: 1000
      #   fsGroup: 1000
      containers:
        - name: grimmory
          image: ghcr.io/grimmory-tools/grimmory:v3.4.1@sha256:cfb523e1cee7b10cda46e523e4a76014800842383985c525ed8d0402c1093f4a
          ports:
            - containerPort: 6060
              protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: data
              mountPath: /app/data
            - name: books
              mountPath: /books
            - name: bookdrop
              mountPath: /bookdrop
          resources:
            limits:
              memory: "1Gi"
          livenessProbe:
            httpGet:
              path: /api/v1/healthcheck
              port: 6060
            initialDelaySeconds: 60
            periodSeconds: 60
            timeoutSeconds: 10
      restartPolicy: Always
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: grimmory-data-pvc
        - name: books
          persistentVolumeClaim:
            claimName: grimmory-books-pvc
        - name: bookdrop
          persistentVolumeClaim:
            claimName: grimmory-bookdrop-pvc
