kubernetes/apps/grimmory/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grimmory
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
spec:
  ingressClassName: traefik
  rules:
    - host: grimmory.leehosanganson.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grimmory
                port:
                  number: 6060

  tls:
    - hosts:
        - grimmory.leehosanganson.dev
      secretName: grimmory-tls
